[gd_scene load_steps=4 format=3 uid="uid://uvp3hbeblp6i"]

[ext_resource type="Script" path="res://src/menu.gd" id="1_7tk8d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ckh1b"]
content_margin_left = 5.0
content_margin_top = 10.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0, 0, 0, 0.8)
border_width_top = 5
border_color = Color(0, 0.843137, 0.356863, 0.745098)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtyn6"]
bg_color = Color(0.152941, 0.152941, 0.152941, 0.682353)

[node name="Menu" type="Window"]
disable_3d = true
transparent_bg = true
size = Vector2i(64, 128)
borderless = true
always_on_top = true
transparent = true
unfocusable = true
script = ExtResource("1_7tk8d")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(54, 128)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ckh1b")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Activities" type="Panel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_gtyn6")

[node name="Pin" type="Panel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_gtyn6")

[node name="Launcher" type="Panel" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_gtyn6")

[connection signal="gui_input" from="PanelContainer/VBoxContainer/Activities" to="." method="_on_activities_gui_input"]
[connection signal="gui_input" from="PanelContainer/VBoxContainer/Pin" to="." method="_on_pin_gui_input"]
[connection signal="gui_input" from="PanelContainer/VBoxContainer/Launcher" to="." method="_on_launcher_gui_input"]
